--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"prettier-plugin-svelte": "^3.0.0",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"svelte-previous": "^2.1.4",
 		"tailwindcss": "^3.3.5",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
