--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"svelte-previous": "^2.1.4",
+		"tailwind-scrollbar": "^3.0.5",
 		"tailwindcss": "^3.3.5",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
@@ -35,6 +36,7 @@
 	"type": "module",
 	"dependencies": {
 		"sass": "^1.69.5",
+		"svelte-persisted-store": "^0.7.0",
 		"theme-change": "^2.5.0"
 	}
 }
